kubernetes/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging 
  labels:
    name: staging
