kubernetes/staging/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: node-group
                  operator: In
                  values:
                    - staging
            topologyKey: "kubernetes.io/hostname"

      containers:
        - name: nginx
          image: nginx:latest
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 80

      tolerations:
      - key: node-group
        operator: Equal
        effect: NoSchedule
        value: staging
