kubernetes/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-group
                    operator: In
                    values:
                      - staging
                      - spot
      containers:
      - name: django-app
        image: nginx:latest
        ports:
        - containerPort: 80
      tolerations:
      - key: node-group
        operator: Equal
        effect: NoSchedule
        value: staging
      - key: node-group
        operator: Equal
        effect: NoSchedule
        value: spot
