kubernetes/staging/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  namespace: staging
spec:
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
