kubernetes/staging/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: staging
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-nginx
              port:
                number: 80
